update DB columns
co-authored-by: Frederick Ernest <frederick.ernest@gmail.com>
Co-Authored-By: Christine Augustine <blacchoy@gmail.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -3,3 +3,7 @@
 }
 
 <h1>Welcome to the Recipe Box!</h1>
+
+@Html.ActionLink("See all Categories", "Index", "Categories")
+@Html.ActionLink("See all Recipes", "Index", "Recipes")
+@Html.ActionLink("Create an account", "Index", "Account")
