--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 
 <h1>Welcome to the Recipe Box!</h1>
 
-@Html.ActionLink("See all Categories", "Index", "Categories")
-@Html.ActionLink("See all Recipes", "Index", "Recipes")
-@Html.ActionLink("Create an account", "Index", "Account")
+@Html.ActionLink("See all Categories", "Index", "Categories")<br>
+@Html.ActionLink("See all Recipes", "Index", "Recipes")<br>
+<button type="button" class="btn btn-info">@Html.ActionLink("Create an account", "Index", "Account")</button>
