--- a/RecipeBox/Views/Categories/Index.cshtml
+++ b/RecipeBox/Views/Categories/Index.cshtml
@@ -1,1 +1,8 @@
 HELLO
+
+@{
+  Layout = "_Layout";
+}
+
+@Html.ActionLink("See all Categories", "Index", "Categories")<br>
+@Html.ActionLink("See all Recipes", "Index", "Recipes")<br>
