update Categories and Recipes views
Co-Authored-By: Christine Augustine <blacchoy@gmail.com>
co-authored-by: Frederick Ernest <frederick.ernest@gmail.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -4,4 +4,4 @@
 
 <h1>Welcome to the Recipe Box!</h1>
 
-<button type="button" class="btn btn-info">@Html.ActionLink("Create an account", "Index", "Account")</button>
+<button type="button" class="btn btn-light">@Html.ActionLink("Create an account", "Index", "Account")</button>
