--- a/RecipeBox/Views/Account/Index.cshtml
+++ b/RecipeBox/Views/Account/Index.cshtml
@@ -4,7 +4,7 @@
 
 @using System.Security.Claims
 
-<h2>Authentication with Identity</h2>
+<h1>Authentication with Identity</h1>
 <hr />
 @if (User.Identity.IsAuthenticated)
 {
@@ -13,7 +13,7 @@
     {
         @Html.ActionLink("See all Categories", "Index", "Categories")<br>
         @Html.ActionLink("See all Recipes", "Index", "Recipes")<br>
-        <input type="submit" class="btn btn-default" value="Log out" />
+        <input type="submit" class="btn btn-dark" value="Log out" />
     }
 }
 else
