--- a/RecipeBox/Views/Account/Login.cshtml
+++ b/RecipeBox/Views/Account/Login.cshtml
@@ -6,15 +6,15 @@
 
 @model LoginViewModel
 
-<h2>Log in with your account</h2>
+<h1>Log in with your account</h1>
 <hr />
 @using (Html.BeginForm())
 {
-    @Html.LabelFor(m => m.Email)
-    @Html.TextBoxFor(m => m.Email)
+  @Html.LabelFor(m => m.Email)<br>
+  @Html.TextBoxFor(m => m.Email)<br>
 
-    @Html.LabelFor(m => m.Password)
-    @Html.PasswordFor(m => m.Password)
+  @Html.LabelFor(m => m.Password)<br>
+  @Html.PasswordFor(m => m.Password)<br>
 
-    <input type="submit" value="Log in" class="btn btn-default" />
+  <input type="submit" value="Log in" class="btn btn-default" />
 }
