--- a/RecipeBox/Views/Account/Register.cshtml
+++ b/RecipeBox/Views/Account/Register.cshtml
@@ -6,18 +6,18 @@
 
 @model RegisterViewModel
 
-<h2>Register a new user</h2>
+<h1>Register a new user</h1>
 <hr />
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
-    @Html.LabelFor(user => user.Email)
-    @Html.TextBoxFor(user=> user.Email)
+    @Html.LabelFor(user => user.Email)<br>
+    @Html.TextBoxFor(user=> user.Email)<br>
 
-    @Html.LabelFor(user=> user.Password)
-    @Html.PasswordFor(user=> user.Password)
+    @Html.LabelFor(user=> user.Password)<br>
+    @Html.PasswordFor(user=> user.Password)<br>
 
-    @Html.LabelFor(user=> user.ConfirmPassword)
-    @Html.PasswordFor(user=> user.ConfirmPassword)
+    @Html.LabelFor(user=> user.ConfirmPassword)<br>
+    @Html.PasswordFor(user=> user.ConfirmPassword)<br>
 
     <input type="submit" value="Register" />
 }
