--- a/RecipeBox/Views/Categories/Details.cshtml
+++ b/RecipeBox/Views/Categories/Details.cshtml
@@ -15,14 +15,13 @@
 else
 {
   <h4>Recipes the category contains:</h4>
-  <ul>
   @foreach(var join in Model.Recipes)
   {
-    <li>@join.Recipe.Description</li>
+    <p>@join.Recipe.Description</p>
   }
-  </ul>
 }
 
 <p>@Html.ActionLink("Back to categories", "Index")</p>
 <p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
 <p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
+<p>@Html.ActionLink("Add a Recipe", "AddRecipe", new { id = Model.CategoryId })</p>
