--- a/RecipeBox/Views/Categories/Index.cshtml
+++ b/RecipeBox/Views/Categories/Index.cshtml
@@ -2,5 +2,25 @@
   Layout = "_Layout";
 }
 
-@Html.ActionLink("See all Categories", "Index", "Categories")<br>
-@Html.ActionLink("See all Recipes", "Index", "Recipes")<br>
+@{
+  Layout = "_Layout";
+}
+
+@using RecipeBox.Models;
+@model List<RecipeBox.Models.Category>;
+
+<h1>Categories</h1>
+
+@if (@Model.Count == 0)
+{
+  <h3>No categories have been added yet!</h3>
+} 
+
+@foreach (Category category in Model)
+{
+  @Html.ActionLink($"{category.Name}", "Details", new { id = category.CategoryId })<br>
+}
+
+
+@Html.ActionLink("Add new category", "Create")<br>
+@Html.ActionLink("Home", "Index", "Home")<br>
