--- a/RecipeBox/Views/Categories/Details.cshtml
+++ b/RecipeBox/Views/Categories/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Category Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+<h2>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h2>
 
 @if(@Model.Recipes.Count == 0)
 {
@@ -14,14 +14,14 @@
 }
 else
 {
-  <h4>Recipes the category contains:</h4>
+  <h3>Recipes the category contains:</h3>
   @foreach(var join in Model.Recipes)
   {
-    <p>@join.Recipe.Description</p>
+    <p><h4>@join.Recipe.Description</h4></p>
   }
 }
 
-<p>@Html.ActionLink("Back to categories", "Index")</p>
 <p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
 <p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
 <p>@Html.ActionLink("Add a Recipe", "AddRecipe", new { id = Model.CategoryId })</p>
+<p>@Html.ActionLink("Back to categories", "Index")</p>
